# ccnest

./: .gitignore  Cargo.toml  README.md
.docs/: file-tree-icons-colors.md
.github/workflows/: release.yml
.serena/: project.yml
docs/: index.html
examples/: spawn_probe.rs
npm/: .gitignore  README.md  package.json
npm/scripts/: install.js
scripts/: install.ps1
src/: app.rs  event.rs  keymap.rs  lib.rs  main.rs
src/claude/: launcher.rs  mod.rs  session.rs
src/pane/: mod.rs  pty.rs
src/sidebar/: claude_ctx.rs  filetree.rs  mod.rs  panelist.rs
src/ui/: mod.rs  theme.rs
tests/: vt100_shrink_orphan_wide.rs
